--- a/css/destination.css
+++ b/css/destination.css
@@ -1,37 +1,1 @@
-
-.title__box {
-    background-color: #393939;
-    width : 300px;
-    height : 200px;
-    color : #FFF;
-}
-
-.title__bgimg {
-    width : 100%;
-    height: 700px;
-    background-position: center;
-    background-size: cover;
-    background-image: url("..\\assets\\images\\coffee-circle.jpg")
-}
-
-.nav__link {
-    width : 100%;
-    background-color: #393939;
-    color : #FFF;
-    list-style-type: none;
-    text-align: center;
-    font-weight: 400;
-    font-size: 21px;
-    text-decoration : none;
-}
-
-.prod__desc {
-    text-align: left;
-    font-style: italic;
-    width: 500px;
-}
-
-.prod__price {
-    color: #5BACC3;
-    text-align: center;
-}
+/*# sourceMappingURL=destination.css.map */
