--- a/css/global.scss
+++ b/css/global.scss
@@ -1,3 +1,11 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0px;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -12,6 +20,7 @@ nav {
 .cards{
     display: flex;
     justify-content: space-evenly;
+    margin: 0rem 8rem;
 
 
     &__item{
@@ -19,10 +28,27 @@ nav {
         margin: 1rem 0;
         padding: 3rem 0;
         text-align: center;
-        background-color: #eeeeee;
+        background-size: 17rem 22rem;
         border-radius: 5px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-        width: 15rem;
-        height: 15rem;
+        width: 17rem;
+        height: 22rem;
     }
+}
+
+main {
+    margin: 3rem;
+}
+
+footer {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 8rem 8rem 0rem;
+
+    .more__info {
+        display: inline-block;
+        margin-right: 1rem;
+    }
+
+
 }
