--- a/css/destination.css
+++ b/css/destination.css
@@ -1,1 +1,47 @@
-/*# sourceMappingURL=destination.css.map */
+.bg__img--hawaii {
+  background-image: url("../assets/Images/hawaii.jpg");
+  background-size: 120vw 250vh;
+  background-position: -100px -450px;
+}
+
+.bg__img--greece {
+  background-image: url("../assets/Images/greece.jpg");
+  background-size: 120vw 250vh;
+  background-position: -100px -450px;
+}
+
+.bg__img--iceland {
+  background-image: url("../assets/Images/iceland.jpg");
+  background-size: 120vw 250vh;
+  background-position: -100px -450px;
+}
+
+main {
+  margin: 0rem;
+  height: 130vh;
+}
+main h1 {
+  position: relative;
+  left: 50px;
+  top: 50px;
+  font-size: 5rem;
+  margin: 0rem;
+  color: white;
+}
+
+.cards {
+  margin: 8rem 8rem 0rem;
+}
+.cards__item {
+  background-color: white;
+}
+.cards__item h4 {
+  border-bottom: 3px solid black;
+  margin: 1rem;
+  font-weight: bold;
+}
+.cards__item p {
+  margin: 1.5rem 0.5rem;
+  padding: 0.8rem 0rem;
+  background-color: #FEFAF5;
+}/*# sourceMappingURL=destination.css.map */
