--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,7 @@ main{
     h2{
         position: relative;
         left: 50px;
+        color: #335576;
     }
 }
 
@@ -21,7 +22,7 @@ main{
 
     h3 {
         position: relative;
-        top: 250px;
+        top: 300px;
         left: 75px;
         color: white;
     }
