--- a/css/global.css
+++ b/css/global.css
@@ -1,11 +1,16 @@
 * {
   box-sizing: border-box;
+  font-family: Verdana, sans-serif;
 }
 
 body {
   margin: 0px;
 }
 
+a {
+  font-weight: 400;
+  font-size: 1.1rem;
+}
 a:link {
   text-decoration: none;
 }
@@ -14,8 +19,12 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0rem 0.5rem;
+  padding: 0rem 0.5rem;
   background-color: white;
+  position: fixed;
+  top: 0;
+  width: 1280px;
+  overflow: hidden;
 }
 nav .active {
   -webkit-text-decoration: solid underline #DB7A4E 4px;
@@ -25,6 +34,13 @@ nav .active {
 nav a {
   margin: 0.2rem;
   color: #335576;
+}
+nav li {
+  list-style-type: none;
+}
+nav ul {
+  display: inline;
+  padding-left: 1rem;
 }
 
 .cards {
@@ -61,20 +77,19 @@ footer .more__info {
 footer img {
   height: 30px;
   width: 25px;
-  margin-right: 3rem;
+  margin-right: 2.5rem;
 }
 footer h2, footer p {
   color: #335576;
 }
-footer h4 {
+footer p {
+  font-weight: 540;
+}
+footer h6 {
   color: #DB7A4E;
 }
 
 .wordmark {
   color: #335576;
-  margin-left: 3rem;
-}
-
-.slogan {
-  color: #335576;
+  margin: 0rem 0rem 0rem 5rem;
 }/*# sourceMappingURL=global.css.map */
