--- a/css/global.scss
+++ b/css/global.scss
@@ -1,5 +1,7 @@
+
 * {
     box-sizing: border-box;
+    font-family: Verdana, sans-serif;
 }
 
 body {
@@ -7,6 +9,8 @@ body {
 }
 
 a{
+    font-weight: 400;
+    font-size: 1.1rem;
     &:link {
         text-decoration: none;
     }
@@ -16,8 +20,12 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0rem 0.5rem;
+    padding: 0rem 0.5rem;
     background-color: white;
+    position: fixed;
+    top: 0;
+    width: 1280px;
+    overflow: hidden;
     .active {
         text-decoration: solid underline #DB7A4E 4px;
         text-underline-offset: 0.5rem; 
@@ -26,6 +34,14 @@ nav {
     a {
         margin: 0.2rem;
         color:#335576;
+    }
+    
+    li{
+        list-style-type: none;
+    }
+    ul{
+        display: inline;
+        padding-left: 1rem;
     }
 }
 
@@ -69,14 +85,18 @@ footer {
     img {
         height: 30px;
         width: 25px;
-        margin-right: 3rem;
+        margin-right: 2.5rem;
     };
 
     h2,p{
         color:#335576;
     };
 
-    h4 {
+    p{
+        font-weight: 540;
+    }
+
+    h6 {
         color: #DB7A4E;
     }
 
@@ -85,9 +105,5 @@ footer {
 
 .wordmark {
     color: #335576 ;
-    margin-left: 3rem;
-}
-
-.slogan {
-    color: #335576 ;
-}
+    margin: 0rem 0rem 0rem 5rem;
+};
