--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,32 @@
 .hero {
   display: flex;
-  padding: 2rem;
+  padding: 8rem 0rem 8rem;
   justify-content: space-around;
   background-color: #FEFAF5;
 }
+.hero__info {
+  width: 600px;
+}
 .hero img {
-  height: 45vh;
-  width: 25vw;
+  height: 65vh;
+  width: 40vw;
+}
+.hero h1 {
+  color: #335576;
+  font-size: 2.5rem;
+}
+.hero p {
+  color: #335576;
+  font-weight: 450;
+}
+.hero button {
+  background-color: #DB7A4E;
+  color: white;
+  border: none;
+  border-radius: 2rem;
+  font-size: 1rem;
+  padding: 0.6rem 3rem;
+  margin-top: 1.2rem;
 }
 
 main h2 {
