--- a/css/destination.scss
+++ b/css/destination.scss
@@ -1,25 +1,22 @@
 
 .bg__img--hawaii{
     background-image: url("../assets/Images/hawaii.jpg");
-    background-size: 120vw 250vh;
-    background-position: -100px -450px;
 }
 
 .bg__img--greece{
     background-image: url("../assets/Images/greece.jpg");
-    background-size: 120vw 250vh;
-    background-position: -100px -450px;
 }
 
 .bg__img--iceland{
     background-image: url("../assets/Images/iceland.jpg");
+}
+
+main {
     background-size: 120vw 250vh;
     background-position: -100px -450px;
-}
-main {
     margin: 0rem;
     padding-top: 5rem;
-    height: 130vh;
+    height: 150vh;
     h1 {
         position: relative;
         left: 50px;
@@ -41,10 +38,15 @@ main {
             font-weight: bold;
         }
 
-        p{
+        ul{
+            padding: 0rem;
+        }
+
+        li{
             margin: 1.5rem 0.5rem;
             padding: 0.8rem 0rem;
             background-color: #FEFAF5;
+            display:block;
         }
     }
 }
