--- a/css/global.css
+++ b/css/global.css
@@ -35,12 +35,15 @@ nav a {
   margin: 0.2rem;
   color: #335576;
 }
-nav li {
-  list-style-type: none;
+
+ul {
+  padding: 0rem;
 }
-nav ul {
+
+li {
+  list-style-type: none;
   display: inline;
-  padding-left: 1rem;
+  padding-left: 0.5rem;
 }
 
 .cards {
