--- a/css/global.css
+++ b/css/global.css
@@ -14,6 +14,11 @@ a {
 a:link {
   text-decoration: none;
 }
+a:hover {
+  -webkit-text-decoration: solid underline #DB7A4E 4px;
+          text-decoration: solid underline #DB7A4E 4px;
+  text-underline-offset: 0.5rem;
+}
 
 nav {
   display: flex;
@@ -61,6 +66,10 @@ li {
   border: 1px solid rgba(0, 0, 0, 0.2);
   width: 17rem;
   height: 22rem;
+}
+.cards a:hover {
+  border: 7px solid #DB7A4E;
+  border-radius: 5px;
 }
 
 main {
